# cppLearn

./: .gitignore  README.md  heterogeneous-queue.cpp  htvector.cpp  lambda1.cpp  lambda2.cpp  max3ref.cpp  null_ptr1.cpp  null_ptr2.cpp  p1.cpp  p10.cpp  p11.cpp  p14.cpp  p2  p2.cpp  p3.cpp  p4.cpp  p5  p5.cpp  p6.cpp  p8.cpp  p9.cpp  policyBased.cpp  problem.cpp  randomGen.cpp  temp.cpp  template-overload.cpp  test.cpp  ttparam.cpp
codec/: codec.tar.xz
codec/v1/: main.cpp
codec/v2/: main.cpp
codec/v3/: main.cpp
codec/v4/: main.cpp
codec/v6/: main.cpp
concurrency/: co-op-cancel_1.cpp  co-op-cancel_2.cpp  co-op-cancel_3.cpp  co-op-cancel_4.cpp  co-op-cancel_5.cpp  co-op-cancel_6.cpp  co-op-cancel_7.cpp
corecpp/: p1.cpp
coroutine/: README.md  corolib.hpp  main.cpp
cpp20/: README.md  concept2.cpp  concepts.cpp  decays.cpp  ranges.cpp
cpprest/: CMakeLists.txt  README.md  test.cpp
cpprest/examples/: CMakeLists.txt  README.md  example1.cpp  example2.cpp  example3.cpp  example4.cpp
dp/: notes.txt
fiber/: fiber.hpp  main.cpp
functional/: accumulate1.cpp  in
functor/: functor.cpp
metaprogramming/: defconstructible.cpp  isInPack_v1.cpp  kv.cpp
moveSemantics/: README.md  m1.cpp  m2.cpp  m3.cpp
reflection/: main.cpp
struct_serialization/: conversion_messageA.hpp  extra_header.hpp  input_a.json  magic.cpp  main.cpp  message_headers.hpp  reflection.hpp  source.bc  source.cpp  type_traits.hpp
templates/: MemoryHelper.hpp  PrintHelper.hpp  argument_find.cpp  out2  p0.cpp  p01.cpp  p02.cpp  p03.cpp  p04.cpp  p05.cpp  p1.cpp  p10.cpp  p11.cpp  p12.cpp  p13.cpp  p14.cpp  p2.cpp  p3.cpp  p4.cpp  p5.cpp  p6.cpp  p7.cpp  p8.cpp  p9.cpp  template_specialization.cpp  variadic1.cpp  variadic2.cpp
templates/compilation/: h1.hpp  (+2 more)
testDir/: a.cpp  a.hpp  b.cpp  b.hpp
tt/: melissa-puente-6
(+6 files in other folders)
